# field-robot-autonomous-exploration

./: .gitignore  README.md
media/: Task 1.webm  Task 2.webm  Task 3.webm
workspace/: run_task_3.sh
workspace/src/field_robot_description/: CMakeLists.txt  package.xml
workspace/src/field_robot_description/launch/: display_robot.launch.py
workspace/src/field_robot_description/urdf/: field_robot.urdf.xacro
workspace/src/field_robot_gazebo/: CMakeLists.txt  package.xml
workspace/src/field_robot_gazebo/launch/: spawn_robot_gazebo.launch.py
workspace/src/field_robot_gazebo/worlds/: field_environment.world
workspace/src/field_robot_navigation/: CMakeLists.txt  package.xml
workspace/src/field_robot_navigation/config/: nav2_params.yaml  nav2_view.rviz  slam_params.yaml  slam_view.rviz
workspace/src/field_robot_navigation/launch/: navigation.launch.py  slam.launch.py  slam_exploration.launch.py
workspace/src/field_robot_navigation/maps/: field_map.pgm  field_map.yaml  field_map1.pgm  field_map1.yaml
workspace/src/field_robot_navigation/scripts/: circular_trajectory.py  exploration_controller.py
