<?xml version="1.0"?>
<package format="3">
  <name>field_robot_gazebo</name>
  <version>1.0.0</version>
  <description>Gazebo simulation for field robot</description>
  <maintainer email="viswag001@gmail.com">Gandamalla Viswa</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>field_robot_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
