<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>field_robot_navigation</name>
  <version>1.0.0</version>
  <description>Navigation stack for field robot</description>
  <maintainer email="viswag001@gmail.com">Gandamalla Viswa</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>nav2_bringup</depend>
<!-- <depend>nav2_common</depend> -->
  <depend>navigation2</depend>
  <depend>slam_toolbox</depend>
  
  <exec_depend>field_robot_description</exec_depend>
  <exec_depend>field_robot_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
